# python-template

./: .flake8  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: pr-checks.yaml
src/hello_world/: __init__.py  message.py
tests/: test_message.py
