[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.8.23"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
mypy = "^0.981"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
