[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.6.9"

[tool.ruff]
select = ["ALL"]
ignore = ["D211", "D213"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "S101", "S105", "INP001", "ANN201"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
